--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "course",
+  "name": "pwa",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
+    "@angular/service-worker": "~11.0.0",
     "express": "^4.17.1",
     "path": "^0.12.7",
     "rxjs": "~6.6.3",
