--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "http-server -p 8080 -c-1 dist/course",
+    "start:prod": "ng build --prod && http-server -p 8080 -c-1 dist/course",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -28,6 +29,7 @@
     "@angular/router": "~11.0.0",
     "@angular/service-worker": "~11.0.0",
     "express": "^4.17.1",
+    "http-server": "^0.12.3",
     "path": "^0.12.7",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
